# spatial-reconstruction

./: .gitattributes  CLI_USAGE.md  CV_NOTES.md  README.md  ba.py  ba_gtsam.py  config.py  main.py  pyproject.toml  render_gs.py  sfm.py  sift_test.py  utils.py
assets/: statue_orbit_disk_lg.ply  statue_orbit_disk_lg_ba.ply  statue_orbit_sift_bf.ply  statue_orbit_sift_bf_ba.ply  statue_orbit_sift_bf_bad_K.ply  statue_orbit_sift_bf_bad_K_ba.ply
data/: data_subsample.py
data/calibration/redmi/: calib.yaml  calibration_params.npz
data/calibration/tumvi/: calib.yaml  camchain.yaml
experiments/: convert_to_nerfstudio.py  kornia_disk_demo.py  pyceres_ba_tutorial.py  sfm_debug.py  sift_test.py
gtsam/: VisualSAM2Example.py  demo_gtsam_ba.py  isam2_slam_tumvi.py  keyframe_streamer.py
notes/: 3DCV.md  appendices.md  applications.md
utils/: __init__.py  camera.py  features.py  graph.py  io.py  pointcloud.py  tracks.py  view.py
