[project]
name = "spatial-reconstruction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaleido>=1.2.0", # TODO: likely not needed (export of static plotly graph images to PNG)
    "marimo>=0.18.4",
    "matplotlib>=3.10.8",
    "open3d>=0.19.0",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "pyceres>=2.6",
    "pycolmap>=3.13.0",
]

[tool.ruff]
line-length = 120 # Increase from default 88

[dependency-groups]
dev = [
    "ipython>=9.9.0",
]
