[project]
name = "spatial-reconstruction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gsplat>=1.5.3",
    "gtsam-develop>=4.3a1.dev202603261854",
    "kornia>=0.8.2",
    "kornia-moons>=0.2.9",
    "marimo>=0.18.4",
    "matplotlib>=3.10.8",
    "open3d>=0.19.0",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "pyceres>=2.6",
    "pycolmap==3.13.0",
    "rich>=14.3.1",
    "torch>=2.11.0",
    "tyro>=1.0.5",
]

[tool.ruff]
line-length = 120 # Increase from default 88

[dependency-groups]
dev = [
    "ipython>=9.9.0",
    "ruff>=0.15.9",
]
